--- a/app/src/main/res/layout/activity_issue_super_tag.xml
+++ b/app/src/main/res/layout/activity_issue_super_tag.xml
@@ -174,6 +174,7 @@
                 android:background="@drawable/edit_back_view"
                 android:backgroundTint="@color/line_color"
                 android:fontFamily="@font/inter_semibold"
+                android:visibility="gone"
                 android:foreground="?selectableItemBackground"
                 android:gravity="center"
                 android:onClick="@{v->vm.onClick(v)}"
