--- a/app/src/main/res/layout/activity_need_fastag.xml
+++ b/app/src/main/res/layout/activity_need_fastag.xml
@@ -16,6 +16,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <LinearLayout
@@ -49,9 +50,10 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginHorizontal="@dimen/_15sdp"
             android:layout_marginTop="@dimen/_15sdp"
             android:background="@drawable/edit_back_view1"
             android:gravity="center">
@@ -60,15 +62,16 @@
                 android:id="@+id/spinner"
                 style="@style/spinnerStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/_30sdp"
+                android:layout_height="@dimen/_40sdp"
                 android:layout_gravity="center"
                 android:dropDownVerticalOffset="@dimen/_35sdp"
                 android:elevation="@dimen/_15sdp"
                 android:gravity="center" />
+
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tvConfirm"
+            android:id="@+id/tvProceed"
             style="@style/TextView.InterRegular_12ssp"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_40sdp"
@@ -81,7 +84,7 @@
             android:foreground="?selectableItemBackground"
             android:gravity="center"
             android:onClick="@{v->vm.onClick(v)}"
-            android:text="Confirm"
+            android:text="Proceed"
             android:textColor="@color/fsm_bg_light_teal"
             android:textSize="@dimen/_16sdp" />
 
