--- a/app/src/main/res/layout/fragment_old_inventory.xml
+++ b/app/src/main/res/layout/fragment_old_inventory.xml
@@ -16,32 +16,202 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
+        android:background="@color/line_colo10">
+
+        <TextView
+            android:id="@+id/tvShowingTags"
+            style="@style/TextView.InterRegular_12ssp"
+            android:layout_marginStart="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_12sdp"
+            android:singleLine="true"
+            android:text="Showing tags"
+            android:textColor="@color/fsm_text_color"
+            android:textSize="@dimen/_12sdp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="@dimen/_15sdp"
+            android:background="@drawable/edit_back_view1"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="@+id/tvShowingTags"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tvShowingTags">
+
+            <Spinner
+                android:id="@+id/spOld"
+                style="@style/spinnerStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_28sdp"
+                android:layout_gravity="center"
+                android:dropDownVerticalOffset="@dimen/_35sdp"
+                android:gravity="center" />
+
+        </LinearLayout>
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvHomeDrawer"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:visibility="gone"
-            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_15sdp"
             android:overScrollMode="never"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvShowingTags"
             tools:listitem="@layout/holder_old_inventory" />
 
-        <ImageView
+        <TextView
             android:id="@+id/ivNoData"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            style="@style/TextView.InterRegular_12ssp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:gravity="center_vertical"
+            android:text="No Tag to Show"
+            android:textColor="@color/line_color"
+            android:textSize="@dimen/_16sdp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_width="@dimen/_150sdp"
-            android:scaleType="centerCrop"
-            android:layout_height="@dimen/_150sdp"
-            android:src="@drawable/no_data"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:id="@+id/llUserView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:weightSum="1.1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <EditText
+                android:id="@+id/etvSearchProject"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_42sdp"
+                android:layout_marginHorizontal="@dimen/_12sdp"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:background="@drawable/edit_back_view"
+                android:drawableStart="@drawable/iv_search_mini"
+                android:drawablePadding="@dimen/_7sdp"
+                android:drawableTint="@color/fsm_text_color80"
+                android:gravity="center_vertical"
+                android:hint="Search"
+                android:paddingHorizontal="@dimen/_15sdp"
+                android:singleLine="true"
+                android:textColor="@color/fsm_text_color"
+                android:textColorHint="@color/fsm_text_color80"
+                android:textSize="@dimen/_14ssp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvUser"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:overScrollMode="never"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/holder_users" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.1"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <TextView
+                    android:id="@+id/tvCancel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_5sdp"
+                    android:layout_weight="1"
+                    android:background="@drawable/rounded_4dp_border"
+                    android:backgroundTint="@color/line_color"
+                    android:fontFamily="@font/poppins_medium"
+                    android:foreground="?selectableItemBackground"
+                    android:includeFontPadding="false"
+                    android:onClick="@{v -> vm.onClick(v)}"
+                    android:padding="@dimen/_10sdp"
+                    android:text="@string/cancel"
+                    android:textAlignment="center"
+                    android:textColor="@color/fsm_bg_light_teal60"
+                    android:textSize="@dimen/_14sdp" />
+
+                <TextView
+                    android:id="@+id/tvAssign"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg_orange_stroke_round_border"
+                    android:fontFamily="@font/poppins_medium"
+                    android:foreground="?selectableItemBackground"
+                    android:includeFontPadding="false"
+                    android:onClick="@{v -> vm.onClick(v)}"
+                    android:padding="@dimen/_10sdp"
+                    android:text="Assign"
+                    android:textAlignment="center"
+                    android:textColor="@color/line_color"
+                    android:textSize="@dimen/_14sdp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvAssign1"
+            style="@style/TextView.InterRegular_12ssp"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginHorizontal="@dimen/_10sdp"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:background="@drawable/edit_back_view"
+            android:backgroundTint="@color/line_color"
+            android:fontFamily="@font/inter_medium"
+            android:foreground="?selectableItemBackground"
+            android:gravity="center"
+            android:visibility="gone"
+            android:onClick="@{v -> vm.onClick(v)}"
+            android:text="Assign"
+            android:textColor="@color/fsm_bg_light_teal"
+            android:textSize="@dimen/_14sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/llFilterOld"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <LinearLayout
+            android:id="@+id/llFilterOld"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:visibility="gone"
+            android:layout_margin="@dimen/_10sdp"
+            android:background="@drawable/white_circle"
+            android:backgroundTint="@color/line_color"
+            android:foreground="?selectableItemBackground"
+            android:gravity="center"
+            android:onClick="@{v-> vm.onClick(v)}"
+            app:layout_constraintBottom_toTopOf="@+id/tvAssign1"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:src="@drawable/filte1"
+                android:tint="@color/white"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
