--- a/app/src/main/res/layout/holder_forwarded_inventory.xml
+++ b/app/src/main/res/layout/holder_forwarded_inventory.xml
@@ -16,33 +16,36 @@
 
         <variable
             name="bean"
-            type="com.riggle.finza_finza.data.model.InventryData" />
+            type="com.riggle.finza_finza.data.model.DispatchUsersData" />
 
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/line_colo10">
+        android:layout_marginHorizontal="@dimen/_10sdp"
+        android:layout_marginVertical="@dimen/_5sdp"
+        android:background="@drawable/rounded_2"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingVertical="@dimen/_5sdp">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/_12sdp"
-            android:layout_marginVertical="@dimen/_5sdp"
-            app:cardCornerRadius="@dimen/_8sdp">
+            android:layout_weight="1">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_10sdp"
-                android:layout_marginVertical="@dimen/_10sdp"
+                android:layout_margin="@dimen/_8sdp"
                 android:orientation="vertical">
 
                 <TextView
                     style="@style/TextView.InterRegular_12ssp"
+                    android:fontFamily="@font/inter_semibold"
                     android:singleLine="true"
-                    android:text='@{"FasTag Number: " + bean.inventory.bar_code}'
+                    android:text="Tags shipped by :"
                     android:textColor="@color/fsm_text_color"
                     android:textSize="@dimen/_12sdp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +55,7 @@
                     style="@style/TextView.InterRegular_12ssp"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:singleLine="true"
-                    android:text='@{"Assignee Name: " + bean.assigned_to.first_name + " " + bean.assigned_to.last_name}'
+                    android:text='@{bean.assigned_to_name +" ("+bean.role_name+")"}'
                     android:textColor="@color/fsm_text_color"
                     android:textSize="@dimen/_12sdp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +65,7 @@
                     style="@style/TextView.InterRegular_12ssp"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:singleLine="true"
-                    android:text='@{"Provider: " + bean.inventory.provider}'
+                    android:text='@{"Tag Count : "+String.valueOf(bean.total_inventories)}'
                     android:textColor="@color/fsm_text_color"
                     android:textSize="@dimen/_12sdp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -70,9 +73,9 @@
 
                 <TextView
                     style="@style/TextView.InterRegular_12ssp"
-                    android:layout_marginTop="@dimen/_2sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
                     android:singleLine="true"
-                    android:text='@{"Sent To: "+bean.assigned_to.first_name+" " + bean.assigned_to.last_name}'
+                    android:text="Bank Name : Bajaj"
                     android:textColor="@color/fsm_text_color"
                     android:textSize="@dimen/_12sdp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -80,9 +83,28 @@
 
             </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvClaimNow"
+            style="@style/TextView.InterRegular_12ssp"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_marginEnd="@dimen/_8sdp"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:layout_weight="0.5"
+            android:background="@drawable/edit_back_view"
+            android:backgroundTint="@color/line_color"
+            android:foreground="?selectableItemBackground"
+            android:gravity="center"
+            android:onClick="@{v -> callback.onItemClick(v,bean,pos)}"
+            android:text="Claim Now"
+            android:textColor="@color/fsm_bg_light_teal"
+            android:textSize="@dimen/_12sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/llFilterInHand"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </LinearLayout>
-
 
 </layout>
