--- a/app/src/main/res/layout/activity_add_money.xml
+++ b/app/src/main/res/layout/activity_add_money.xml
@@ -267,6 +267,7 @@
 
         </androidx.cardview.widget.CardView>
 
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/ll3"
             android:layout_width="match_parent"
@@ -340,6 +341,13 @@
             android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cvPaymentSummary" />
+
+        <android.webkit.WebView
+            android:id="@+id/webview"
+            android:visibility="gone"
+            android:elevation="@dimen/_10sdp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
